--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,5 +36,6 @@ jobs:
       run: |
         pytest --cov=salesreport
     - name: Generate coverage report
+      working-directory: salesreport
       run: |
         coverage html
