--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest matplotlib pandas coverage pytest-cov
+        pip install flake8 pytest pytest-cov matplotlib pandas
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -31,11 +31,13 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest and coverage
+    - name: Test with pytest and collect coverage
       working-directory: salesreport
       run: |
         pytest --cov=salesreport
     - name: Generate coverage report
-      working-directory: salesreport
       run: |
         coverage html
+      env:
+        pythonLocation: /opt/hostedtoolcache/Python/3.10.12/x64
+        LD_LIBRARY_PATH: /opt/hostedtoolcache/Python/3.10.12/x64/lib
