--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,6 +36,7 @@ jobs:
       run: |
         pytest --cov=salesreport
     - name: Generate coverage report
+      working-directory: salesreport
       run: |
         coverage html
       env:
