--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,6 +35,24 @@ jobs:
       working-directory: salesreport
       run: |
         pytest --cov=salesreport
-    - name: Generate coverage report
+    - name: Creating Dummy Artifacts
+      working-directory: salesreport
       run: |
         coverage html
+
+  build_artifacts:
+    working_directory: /tmp
+    steps:
+      - run:
+          name: Creating Dummy Artifacts
+          command: |
+            echo "my artifact file" > /tmp/art-1;
+            mkdir /tmp/artifacts;
+            echo "my artifact files in a dir" > /tmp/artifacts/art-2;
+
+      - store_artifacts:
+          path: /tmp/art-1
+          destination: artifact-file
+
+      - store_artifacts:
+          path: /tmp/artifacts
