--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,45 +1,57 @@
-version: 2
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+
+name: Python application
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+permissions:
+  contents: read
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest matplotlib pandas
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      working-directory: salesreport
+      run: |
+        pytest
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
+    - name: Generate coverage report
+      working-directory: salesreport
+      run: |
+        coverage html
+      env:
+        pythonLocation: /opt/hostedtoolcache/Python/3.10.12/x64
+        LD_LIBRARY_PATH: /opt/hostedtoolcache/Python/3.10.12/x64/lib
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov matplotlib pandas
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Creating Dummy Artifacts
+      run: |
+        echo "my artifact file" > /tmp/art-1;
+        mkdir /tmp/artifacts;
+        echo "my artifact files in a dir" > /tmp/artifacts/art-2;
 
-      - name: Lint with flake8
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-      - name: Test with pytest and collect coverage
-        working-directory: salesreport
-        run: |
-          pytest --cov=salesreport
-
-      - name: Generate coverage report
-        working-directory: salesreport
-        run: |
-          coverage html
-        env:
-          pythonLocation: /opt/hostedtoolcache/Python/3.10.12/x64
-          LD_LIBRARY_PATH: /opt/hostedtoolcache/Python/3.10.12/x64/lib
-
-      - name: Creating Dummy Artifacts
-        run: |
-          echo "my artifact file" > /tmp/art-1;
-          mkdir /tmp/artifacts;
-          echo "my artifact files in a dir" > /tmp/artifacts/art-2;
-
-      - name: Store artifact file
-        uses: actions/upload-artifact@v2
+    - name: Store artifact file
+      uses: actions/upload-artifact@v2
